# 3DOF-ROS2

./: AnglesPublish.py  ArduinoController.py  Controller.py  Run.txt  Sim.py  three_dof.urdf
Controller/: Controller.py  Pid.py
Simulation/: Sim.py
three_dof_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
three_dof_controller/launch/: three_dof_controller.launch.py
three_dof_controller/rviz/: urdf.rviz
three_dof_controller/three_dof_controller/: controller.py
three_dof_controller/urdf/: three_dof.urdf
